ui/totalimpact.css
/* ... */
body div#tooltip.viewport-right {
    -moz-border-radius-topleft: 10px;
    -webkit-border-top-left-radius: 10px;
    -moz-border-radius-topright: 0;
    -webkit-border-top-right-radius: 0;
}


div#tooltip p, div#tooltip div, div#tooltip h3 {
    margin:0;
    padding:0;
}

/* header ************************************/

#header {
    font-size: 1.5em;
    color: #BBB;
}

h1 a {
    background-image:url(./img/ti_logo.png);
    background-repeat: no-repeat;
    background-color:#dadada;
    height: 52px;
    text-indent: -9999px;
    width: 253px;
    padding-top:10px;
    margin-left:40px;
    border: 3px solid #933;
    border-top: 1px solid #999;
    -moz-border-radius-bottomright: 10px;
    -moz-border-radius-bottomleft: 10px;
    -webkit-border-bottom-right-radius: 10px;
    -webkit-border-bottom-left-radius: 10px;
    display:block;
    position: absolute;
    top:0;
    left:75px;
   box-shadow: -1px 0 10px -2px #333333;
    cursor: pointer;       
}
h1 a:hover {
    padding-top:13px;
    background-position: 0 3px;
}

ul#nav {
    margin-top: -31px;
    text-align: right;
    font-size: 20px;
    font-family: 'Lobster Two', helvetica, arial, sans-serif;
    font-style: italic;
    position: absolute;
    top:30px;
    right: 90px;

}

ul#nav li {
    display:block;
    float:right;
    list-style-type:none;
    margin-right:15px;

}
ul#nav li a {
    padding: 5px 10px 0;
    background-color: #aaa;
    color: #fff;
    display:block;
    border:1px solid #ddd;
    border-top:5px solid #888;
    -moz-border-radius-bottomright: 5px;
    -moz-border-radius-bottomleft: 5px;
    -webkit-border-bottom-right-radius: 5px;
    -webkit-border-bottom-left-radius: 5px;
    box-shadow: -2px 1px 5px -1px #333333; 
    cursor: pointer;           
}

ul#nav li a:hover {
    text-decoration: none;
    padding-top: 8px;
}

/* about ************************************/

div#about{
    margin-top: 60px;
}
#toc {
    border: 1px solid #333333;
    float: right;
    margin: 0 21px 12px;
    padding: 16px;
    text-align: left;
    -webkit-border-radius: 4px;    /* CSS3 rounded borders for Safari      */              
    -moz-border-radius: 4px;       /* CSS3 rounded borders for Firefox   */
}
                                   
a.tocBackLink {
    text-align: right;
    font-size: 10px;
    font-weight: normal;
    margin-left: 10px;
}
body#about h2 {
    margin-top: 40px;
}


#input{
}

#footer{
	padding-top: 55px;
}

#importers {
	float:left;
	width: 30%;
	margin-right:5%;
}
#importers table input {
    width: 100%;
}
#importers table button {
    /* width: 100%;*/
}

.heading {
    color: #933;
    font-weight: bold;
}

fieldset {
	border: 1px solid #CCC;
	margin-bottom: 1em;	
}

#go-get-heading {
    margin-top: 31px;
    float:left;
}

#enter-collection-meta {
	float:left;
	width: 35%;
	margin-right:5%;
}

#enter-collection-meta fieldset {
    border: 0;
    padding: 0;
}

#enter-collection-meta fieldset_DISABLING_RED_BORDER_FOR_NOW {
    border: 3px solid #933;
    
    /* height: 500px;
    margin-bottom: 150px; */
    -webkit-border-radius: 7px;    /* CSS3 rounded borders for Safari                    */
    -moz-border-radius: 7px;       /* CSS3 rounded borders for Firefox                   */
    border-radius: 7px;
    box-shadow: 4px 6px 15px -8px #333; 
}
#enter-collection-meta textarea {
    height: 240px;

}

.quick-collection {
    margin-top: 40px; 
/*    margin-left: 60px; */
}

#twitterfeed {
    float:right;
	width: 24%;
}

.largefield {
	font-size: 150%;
	padding: .2em;
	width: 70%;
	color: #666;
}

#artcounter {
    background-color: #EEE;
    color: #666;
    padding: .6em;
    -webkit-border-radius: 4px;    /* CSS3 rounded borders for Safari                    */
    -moz-border-radius: 4px;       /* CSS3 rounded borders for Firefox                   */
    border-radius: 4px;
    text-shadow: 1px 1px 0px #FFF;
    margin-top:0;
    margin-bottom: 0px
    margin-right:10px;
	border: 1px solid #EEE;
	font-size: 120%;
	width: 70%;
	float: left;
}

#clearlist {
    padding-left: 10px;
	float:left;	
}


.largenum {
	font-size: 120%;
	padding: 0 .3em;
	vertical-align: -10%;
    border: 3px solid #933;    
    /* height: 500px;
    margin-bottom: 150px; */
    -webkit-border-radius: 7px;    /* CSS3 rounded borders for Safari                    */
    -moz-border-radius: 7px;       /* CSS3 rounded borders for Firefox                   */
    border-radius: 7px;
    box-shadow: 4px 6px 15px -8px #333; 
}

.lobster {
    font-family: 'Lobster Two';
	text-shadow: 2px 3px 2px #EEE;
    font-style: italic;	
	font-size: 180%;
}

.grey {
	color: #555;
}


#outputs {
	font-size: 10pt;
	float: right;
}
#report h2 {
    text-align:right;
    font-family: 'Lobster Two';
    font-weight: normal;
    font-style: italic;
    margin-right:100px;
    color: #555;
    font-size: 16px;
}


#share {
    clear:both;
}


/* HTML elements */


h3 {
	margin: 0px;
	margin-top:20px;
}

a {
	color: #933;
    cursor: pointer;		
}

hr {
	border: 0;
	background-color: #CCC;
	height: 1px;
}

em.url {
	font-style: normal;
	font-size: 90%;
	color: #999;	
}

p.prompt {
	margin: 0 0 .3em 0;
	padding: 0em;
	font-size: 1em;    
}

p.howto {
    width: 98%;
    background-color: #EEE;
    color: #666;
    padding: .6em;
    font-size: 110%;
    border: 1px solid #EEE;
    -webkit-border-radius: 4px;    /* CSS3 rounded borders for Safari                    */
    -moz-border-radius: 4px;       /* CSS3 rounded borders for Firefox                   */
    border-radius: 4px;
    text-shadow: 1px 1px 0px #FFF;
    margin-top:0;
    margin-bottom: 30px
}

p.sp {
	margin-top: 2em;	
	margin-bottom: 0;	
}

/* updating page ********************************************************/
h2.loading {
    font-family: 'Lobster Two', Helvetica, Arial, sans-serif;
    color: #333;
    font-size: 50px;
    margin: 200px auto;
    width: 800px;
    font-style: italic;
}
/* ... */

